--- a/src/app/registro-ponto/registro-ponto.component.html
+++ b/src/app/registro-ponto/registro-ponto.component.html
@@ -1,25 +1,28 @@
+<div class="header">
+  <div class="avatar"></div>
+  <h1>Registro de Ponto Online</h1>
+</div>
+
 <div class="container">
-    <h1>Sistema de Ponto Eletrônico</h1>
-  
-    <button (click)="registrarPonto()">
-      Registrar {{ proximaBatida }}
-    </button>
-  
-    <table>
-      <thead>
-        <tr>
-          <th>Data</th>
-          <th>Hora</th>
-          <th>Tipo</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let batida of batidas">
-          <td>{{ batida.data }}</td>
-          <td>{{ batida.hora }}</td>
-          <td>{{ batida.tipo }}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  
+  <button (click)="registrarPonto()">Bater ponto</button>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Data</th>
+        <th>Hora</th>
+        <th>Tipo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let batida of batidas">
+        <td>{{ batida.data }}</td>
+        <td>{{ batida.hora }}</td>
+        <td>{{ batida.tipo }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
+
